[gd_scene load_steps=6 format=3 uid="uid://d3xseqrxnwvjh"]

[ext_resource type="Texture2D" uid="uid://ubj5y2wlu8ln" path="res://Assets/monsters.png" id="1_fwdy1"]
[ext_resource type="Script" path="res://Enemy Testing/skeleton.gd" id="1_n3po6"]
[ext_resource type="PackedScene" uid="uid://bflc4dyyluhbu" path="res://Scenes/enemy_healthbar.tscn" id="3_tq68h"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_eftm7"]
load_path = "res://.godot/imported/monsters-damaged.png-c1ad31d526348283433506534646f152.ctex"

[sub_resource type="CircleShape2D" id="CircleShape2D_a5rah"]
radius = 9.0

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967041
script = ExtResource("1_n3po6")

[node name="MainSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_fwdy1")
region_enabled = true
region_rect = Rect2(0, 129.354, 26.9761, 29.713)

[node name="DamagedSprite" type="Sprite2D" parent="."]
visible = false
texture = SubResource("CompressedTexture2D_eftm7")
region_enabled = true
region_rect = Rect2(0, 129.354, 26.9761, 29.713)

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_a5rah")

[node name="HealthBarTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamagedSpriteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("3_tq68h")]
visible = false
offset_left = -11.0
offset_top = -18.0
offset_right = 139.0
offset_bottom = -3.0
scale = Vector2(0.15, 0.15)

[node name="DamageNumbersOrigin" type="Node2D" parent="."]
position = Vector2(0, -15)
